--- a/MultiResolutionTetMesh/Makefile
+++ b/MultiResolutionTetMesh/Makefile
@@ -1,5 +1,8 @@
 all: 
-	g++ -std=c++11 -g \
+	g++ -pthread -O3 -DNDEBUG -I . -I .. -isystem /usr/include -isystem /usr/include/OpenEXR  -isystem /usr/include -DOPENVDB_USE_GLFW_3 -I . \
+	-std=c++11 -I/usr/local/OpenVDB/include -L/usr/local/OpenVDB/lib -l:libopenvdb.so.3.0.0 \
+	-ldl -lm -lz -Wl,-rpath,/usr/lib/x86_64-linux-gnu -L/usr/lib/x86_64-linux-gnu -lHalf -Wl,-rpath,/usr/lib/x86_64-linux-gnu -L/usr/lib/x86_64-linux-gnu -ltbb -Wl,-rpath,/usr/lib/x86_64-linux-gnu -L/usr/lib/x86_64-linux-gnu -lboost_iostreams -lboost_system  -Wl,-rpath,/usr/lib/x86_64-linux-gnu -L/usr/lib/x86_64-linux-gnu -lrt -ljemalloc \
+	-std=c++11 -g \
 	-I/home/filipecn/ClionProjects/Aergia/src \
 	-I/home/filipecn/ClionProjects/Aergia/src/GUI \
 	-I/home/filipecn/ClionProjects/Aergia/src/GUI/UI \
